--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,11 @@
 org.gradle.jvmargs=-Xmx2G
-
 # BTA
 bta_version=1.7.7.0_01
-
 # Loader
 loader_version=0.14.19-babric.1-bta
-
 # HalpLibe
-halplibe_version=2.1.5
-
+halplibe_version=2.1.6
 # Mod
 mod_version=1.0.0
-mod_group=turniplabs
-mod_name=examplemod
+mod_group=rootenginear
+mod_name=craftablechainmail
